incluindo package.json e homepage

--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
   "bugs": {
     "url": "https://github.com/vndp6/case-dp6dev/issues"
   },
-  "homepage": "https://github.com/vndp6/case-dp6dev/"
+  "homepage": "https://github.com/vndp6/case-dp6dev/index.html"
 }
