incluindo package.json e homepage denovo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "case-dp6dev",
   "version": "1.0.0",
   "description": "versão dev",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
